--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,4 +1,4 @@
-name: Xcode - Build and Release to GH
+name: Build and Release to GH releases
 
 on:
   push:
@@ -13,11 +13,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Build
         run: xcodebuild -scheme notepaxx -configuration Release -derivedDataPath build
+      - name: Extract app into a folder
+        run: mkdir app
+        run: mv build/Build/Products/Release/notepaxx.app app
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
           name: notepaxxapp
-          path: build/Build/Products/Release/
+          path: app/
 
   release-app:
     name: Release App
@@ -41,7 +44,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v1.${{ github.run_number }}
-          release_name: v1.${{ github.run_number }}
+          release_name: v1.${{ github.run_number }}.0
       - name: Upload release artifact
         uses: actions/upload-release-asset@v1
         env:
@@ -49,5 +52,5 @@ jobs:
         with:
           upload_url: ${{ steps.creates_release.outputs.upload_url }}
           asset_path: ./app.zip
-          asset_name: notepaxxapp-v1.${{ github.run_number }}.zip
+          asset_name: notepaxxapp-v1.${{ github.run_number }}.0.zip
           asset_content_type: application/zip
