update: adding code signing

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -16,6 +16,19 @@ jobs:
       - name: Extract app into a folder
         run: mkdir app
         run: mv build/Build/Products/Release/notepaxx.app app
+      - name: Codesign executable
+        env: 
+          MACOS_CERTIFICATE: ${{ secrets.MACOS_CERTIFICATE }}
+          MACOS_CERTIFICATE_PWD: ${{ secrets.MACOS_CERTIFICATE_PWD }}
+          SECURITY_IDENTITY: ${{ secrets.SECURITY_IDENTITY }}
+        run: |
+          echo $MACOS_CERTIFICATE | base64 —decode > certificate.p12
+          security create-keychain -p Password123 build.keychain
+          security default-keychain -s build.keychain
+          security unlock-keychain -p Password123 build.keychain
+          security import certificate.p12 -k build.keychain -P $MACOS_CERTIFICATE_PWD -T /usr/bin/codesign
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k Password123 build.keychain
+          /usr/bin/codesign --force -s $SECURITY_IDENTITY ./app/notepaxx.app -v
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
