--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -27,9 +27,9 @@ jobs:
           security create-keychain -p Password123 build.keychain
           security default-keychain -s build.keychain
           security unlock-keychain -p Password123 build.keychain
-          security import certificate.p12 -k build.keychain -P \$MACOS_CERTIFICATE_PWD -T /usr/bin/codesign
+          security import certificate.p12 -k build.keychain -P $MACOS_CERTIFICATE_PWD -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k Password123 build.keychain
-          /usr/bin/codesign --force -s $SECURITY_IDENTITY ./app/notepaxx.app -v
+          /usr/bin/codesign --force ./app/notepaxx.app -v
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
