--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           KEYCHAIN_PASS=Password123
           echo passw ${{ secrets.MACOS_CERTIFICATE_PWD }}
+          printenv
           echo $MACOS_CERTIFICATE | base64 --decode > certificate.p12
           security create-keychain -p $KEYCHAIN_PASS build.keychain
           security default-keychain -s build.keychain
