--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -31,7 +31,7 @@ jobs:
           security unlock-keychain -p $KEYCHAIN_PASS build.keychain
           security import certificate.p12 -k build.keychain -P $MACOS_CERTIFICATE_PWD -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k Password123 build.keychain
-          /usr/bin/codesign --force -s $SECURITY_IDENTITY ./app/notepaxx.app -v
+          /usr/bin/codesign --force -s $SECURITY_IDENTITY ./app/notepaxx.app/Contents/MacOS/notepaxx -v
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
